# pybind11tests

./: README.md  line.h  point.cpp  point.h  setup.py  test.py
ErrorEstimationTests/errorestimation-python/: CMakeLists.txt
LineProject/: .gitignore  CMakeLists.txt
LineProject/include/: line.h
LineProject/src/: line.cpp  line_bindings.cpp
PointBindings/: .gitignore  CMakeLists.txt  setup.py
PointBindings/src/: point_bindings.cpp
PointProject/: CMakeLists.txt  PointLib-config-version.cmake.in  PointLib-config.cmake  PointLibConfig.cmake.in  PointLibConfigVersion.cmake.in
PointProject/include/PointLib/: point.h
PointProject/src/: CMakeLists.txt  point.cpp
